--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -6,11 +6,12 @@
   border: 0;
   font-size:1.8rem;
   font-weight:600;
-  margin: 1rem 0;
-  padding:10rem 5rem;
+  margin: 2rem 0;
+  padding:100rem 5rem;
   background:red;
   color:white;
   cursor:pointer;
+  text-align:center;
 }
 .card:hover{
   background-color: rgba(255, 0, 0, 0.587);
