--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -7,11 +7,11 @@
   font-size:1.8rem;
   font-weight:600;
   margin: 2rem 0;
-  padding:10rem 5rem;
   background:red;
   color:white;
   cursor:pointer;
   text-align:center;
+  width: 75%
 }
 .card:hover{
   background-color: rgba(255, 0, 0, 0.587);
