--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -11,7 +11,7 @@
   color:white;
   cursor:pointer;
   text-align:center;
-  width: 75%
+  padding:75%,50%;
 }
 .card:hover{
   background-color: rgba(255, 0, 0, 0.587);
