--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -12,6 +12,7 @@
   cursor:pointer;
   text-align:center;
   width:75%;
+  padding:2rem 3rem;
 }
 .card:hover{
   background-color: rgba(255, 0, 0, 0.587);
