--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -1,7 +1,7 @@
 .pokemon-list{
   list-style: none;
 }
-.card{
+.button_style{
   border-radius:20px;
   border: 0;
   font-size:1.8rem;
@@ -14,7 +14,7 @@
   width:75%;
   padding:2rem 3rem;
 }
-.card:hover{
+.button_style:hover{
   background-color: rgba(255, 0, 0, 0.587);
 }
 
