--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -16,7 +16,7 @@
   padding:2rem 3rem;
 }
 .button_style:hover{
-  background-color: rgba(0, 89, 255, 0.587);
+  background-color: rgb(0, 106, 255);
 }
 @font-face{
   font-family: pokemon_text;
