--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -13,7 +13,9 @@
   cursor:pointer;
   text-align:center;
   width:75%;
-  padding:2rem 3rem;
+  height: 400px;
+  width:100px;
+ 
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
