--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -17,6 +17,7 @@
   height: 600px;
   width:400px;
   text-align:center;
+  justify-content:center;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
@@ -29,6 +30,7 @@
 h1{
 font-family: pokemon_text;
 color:yellow;
+justify-content:center;
 }
 
 html{
