add margin increase

--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -8,6 +8,7 @@
   font-family:pokemon_text;
   font-size:1.8rem;
   font-weight:600;
+  margin:3rem;
   background:blue;
   color:yellow;
   cursor:pointer;
