--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -16,6 +16,7 @@
   height: 600px;
   width:400px;
   text-align:center;
+  display:flex
   justify-content:center;
 }
 .button_style:hover{
@@ -29,6 +30,7 @@
 h1{
 font-family: pokemon_text;
 color:yellow;
+display:flex;
 justify-content:center;
 }
 
