--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -1,6 +1,5 @@
 .pokemon-list{
   list-style: none;
-  justify-content:center;
 }
 .button_style{
   border-radius:20px;
@@ -16,7 +15,7 @@
   height: 600px;
   width:400px;
   text-align:center;
-  display:flex
+  display:flex;
   justify-content:center;
 }
 .button_style:hover{
