--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -1,5 +1,7 @@
 .pokemon-list{
   list-style: none;
+  display:flex;
+  justify-content:center;
 }
 .button_style{
   border-radius:20px;
@@ -14,9 +16,9 @@
   text-align:center;
   height: 600px;
   width:400px;
-  text-align:center;
   display:flex;
   justify-content:center;
+  text-align:center;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
