--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -2,6 +2,7 @@
   list-style: none;
   display:flex;
   justify-content:center;
+  text-align:center;
 }
 .button_style{
   border-radius:20px;
@@ -18,6 +19,7 @@
   width:400px;
   display:flex;
   justify-content:center;
+  text-align:center;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
