--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -1,8 +1,6 @@
 .pokemon-list{
   list-style: none;
-  display:flex;
-  text-align:center;
-  justify-content:center;
+  display:flex 0 0 flex;
 }
 .button_style{
   border-radius:20px;
@@ -17,9 +15,6 @@
   text-align:center;
   height: 600px;
   width:400px;
-  display:flex;
-  text-align:center;
-  justify-content:center;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
