--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -15,6 +15,8 @@
   text-align:center;
   height: 600px;
   width:400px;
+  display:flex 0 0 flex;
+}
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
