--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -1,6 +1,7 @@
 .pokemon-list{
   list-style: none;
   display:flex 0 0 flex;
+  width:fit-content;
 }
 .button_style{
   border-radius:20px;
@@ -16,9 +17,11 @@
   height: 600px;
   width:400px;
   display:flex 0 0 flex;
+  width:fit-content;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
+width:fit-content;
 }
 @font-face{
   font-family: pokemon_text;
@@ -30,6 +33,7 @@ font-family: pokemon_text;
 color:yellow;
 display:flex;
 justify-content:center;
+width:fit-content;
 }
 
 html{
@@ -38,4 +42,6 @@ html{
 .container{
   display:flex;
   justify-content:center;
+  width:fit-content;
 }
+
