--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -8,7 +8,8 @@
   font-family:pokemon_text;
   font-size:1.8rem;
   font-weight:600;
-  margin:3rem;
+  margin:auto;
+  padding:auto;
   background:blue;
   color:yellow;
   cursor:pointer;
@@ -39,4 +40,10 @@ html{
   display:flex;
   justify-content:center;
 }
+
+
+
+@media(max-width:1200px);
+
+@media (max-width:600px);
 
