--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -16,6 +16,7 @@
   height: 600px;
   width:400px;
   display:flex 0 0 flex;
+  margin-bottom:30px;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
