--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -15,7 +15,9 @@
   height: 600px;
   width:400px;
   display:flex 0 0 flex;
-  padding:50px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:50px;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
