--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -17,6 +17,8 @@
   display:flex 0 0 flex;
   margin-left:auto;
   margin-right:auto;
+  padding-left:auto;
+  padding-right:auto
   margin-bottom:50px;
 }
 .button_style:hover{
