--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -18,7 +18,7 @@
   margin-left:auto;
   margin-right:auto;
   padding-left:auto;
-  padding-right:auto
+  padding-right:auto;
   margin-bottom:50px;
 }
 .button_style:hover{
