--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -10,6 +10,7 @@
   cursor:pointer;
   height: 600px;
   width:400px;
+  text-align:center;
 }
 .button_style:hover{
   background-color: rgb(0, 106, 255);
@@ -26,6 +27,7 @@ text-align:center;
 }
 .pokemon-list{
   list-style:none;
+  text-align:center;
 }
 
 html{
