--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -34,19 +34,19 @@ html{
   background-color:red;
 }
 
-@media(max-width:1000 {
+@media(max-width:1000) {
   .pokemon-list{
     margin:0;
     padding:0;
   }
 }
 
-@media(max-width:500) {
+@media(max-width:400) {
   .pokemon-list{
     margin:0;
     padding:0;
   }
  .button-style{
    height:300px;
-   weight:100px;
+   width:100px;
 }
