delete ul padding default

--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -36,17 +36,22 @@ html{
 
 @media(max-width:1000) {
   .pokemon-list{
-    margin:0;
-    padding:0;
+    margin:0px;
+    padding:0px;
   }
 }
 
 @media(max-width:400) {
   .pokemon-list{
-    margin:0;
-    padding:0;
+    margin:0px;
+    padding:0px;
   }
  .button-style{
    height:300px;
    width:100px;
+}
+}
+
+ul{
+	padding: 0px;
 }
