--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -10,6 +10,7 @@
   cursor:pointer;
   height: 600px;
   width:400px;
+  margin-bottom:100px;
   text-align:center;
 }
 .button_style:hover{
@@ -39,6 +40,11 @@ html{
     margin:0px;
     padding:0px;
   }
+  .button-style{
+    height:450px;
+    width:300px;
+    margin-bottom:50px;
+ }
 }
 
 @media(max-width:400) {
@@ -48,7 +54,8 @@ html{
   }
  .button-style{
    height:300px;
-   width:100px;
+   width:200px;
+   margin-bottom:25px;
 }
 }
 
