Test 6th with function within and modal within show details. CSS tag to class

--- a/Pokemon_1.7/Poke'mon App/css/styles.css
+++ b/Pokemon_1.7/Poke'mon App/css/styles.css
@@ -71,11 +71,11 @@ body{
 padding:0px;
 }
 
-#modal-container {
+.modal-container {
   display: none;
 }
 
-#modal-container.is-visible {
+.modal-container.is-visible {
   position: fixed;
   padding: 20px;
   box-sizing: border-box;
