--- a/Pokemon_1.7/Poke'mon App/css/styles.css
+++ b/Pokemon_1.7/Poke'mon App/css/styles.css
@@ -84,7 +84,7 @@ html{
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
-  background: red;
+  background: yellow;
   padding: 15px;
   width: 100%;
   max-width: 700px;
@@ -95,17 +95,18 @@ html{
   float: right;
   border: 0;
   background: none;
-  color: blue;
-  text-decoration: underline;
+  color: black;
   font-family:pokemon_text;
 }
 
 .modal h1 {
   margin-top: 0;
   font-family:pokemon_text;
+  color:black;
 }
 
 .modal p {
   margin-bottom: 0;
   font-family:pokemon_text;
+  color:black
 }
