--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -14,7 +14,7 @@
   text-align:center;
 }
 .button_style:hover{
-  background-color: rgb(0, 106, 255);
+  background-color: #833ab4a5;
 }
 @font-face{
   font-family: pokemon_text;
@@ -23,7 +23,7 @@
 
 h1{
 font-family: pokemon_text;
-color:yellow;
+color:#fcb045;
 text-align:center;
 font-size:3rem;
 }
@@ -84,7 +84,7 @@ html{
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
-  background: rgb(#fcb045);
+  background: #fcb045;
   padding: 15px;
   width: 100%;
   max-width: 700px;
