--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -67,6 +67,8 @@ html{
   left: 0;
   width: 100%;
   height: 100%;
+  /* Color need to focus on modal when visible and ignore background   */
+  background: rgba(0, 0, 0, 0.5);
   
   /* to show it above other content */
   z-index: 999; 
