--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -101,6 +101,10 @@ html{
   cursor:pointer;
 }
 
+.modal-close:hover {
+  text-decoration: underline;
+}
+
 .modal h1 {
   margin-top: 0;
   font-family:pokemon_text;
