--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -14,7 +14,7 @@
   text-align:center;
 }
 .button_style:hover{
-  background-color: #c170f8;
+  background-color: rgb(199, 0, 199);
 }
 @font-face{
   font-family: pokemon_text;
