--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -10,7 +10,11 @@
   cursor:pointer;
   height: 300px;
   width:200px;
-  margin-bottom:100px;
+  margin-bottom:50px;
+  margin-left: 50px;
+  margin-right:50px;
+  margin-top:50px;
+  
   text-align:center;
 }
 .button_style:hover{
@@ -42,6 +46,7 @@ html{
     height:450px;
     width:300px;
     margin-bottom:50px;
+    margin:auto;
  }
  h1{
   font-size:3rem;
@@ -54,6 +59,7 @@ html{
    width:150px;
    margin-bottom:25px;
    font-size:1rem;
+   margin:auto;
 }
 }
 #modal-container {
