--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -120,6 +120,10 @@ html{
  #modal-container {
   display: none;
 }
+.modal-close:hover {
+  text-decoration: underline;
+  color:red;
+}
  }
 
 @media(max-width:400px) {
@@ -141,5 +145,10 @@ html{
  }
 #modal-container {
   display: none;
+}
+
+.modal-close:hover {
+  text-decoration: underline;
+  color:red;
 }
 }
