--- a/Poke'mon App/css/styles.css
+++ b/Poke'mon App/css/styles.css
@@ -97,7 +97,7 @@ html{
 .modal p {
   margin-bottom: 0;
   font-family:pokemon_text;
-  color:black
+  color:black;
 }
 
 @media(max-width:1000px) {
