--- a/Pokemon-Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon-Bootstrap/Poke'mon App/css/styles.css
@@ -1,8 +1,9 @@
-html{
+.container-fluid{
   background-color:#db3f3f;
 }
 
-nav{
+.navbar-item,
+.navbar-brand{
   color:rgb(213, 213, 13);
   font-family:pokemon_text;
 }
@@ -22,7 +23,7 @@ nav{
 .btn-primary:hover{
   background-color: rgb(154, 0, 154);
 }
-@font-face{
+.font-face{
   font-family: pokemon_text;
   src:url(Pokemon_Solid.ttf);
 }
