add background to nav

--- a/Pokemon-Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon-Bootstrap/Poke'mon App/css/styles.css
@@ -5,6 +5,7 @@ body{
 .nav-link, .navbar-brand {
   color:rgb(213, 213, 13);
   font-family:pokemon_text;
+  background-color:#db3f3f;
 }
 
 .btn-primary{
