--- a/Pokemon-Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon-Bootstrap/Poke'mon App/css/styles.css
@@ -2,7 +2,7 @@ body{
   background-color:#db3f3f;
 }
 
-.navbar navbar-expand-lg navbar-light bg-light {
+nav.navbar navbar-expand-lg navbar-light bg-light {
   color:rgb(213, 213, 13);
   font-family:pokemon_text;
   background-color:#db3f3f;
