--- a/Pokemon-Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon-Bootstrap/Poke'mon App/css/styles.css
@@ -2,10 +2,13 @@ body{
   background-color:#db3f3f;
 }
 
-nav.navbar navbar-expand-lg navbar-light bg-light {
-  color:rgb(213, 213, 13);
-  font-family:pokemon_text;
-  background-color:#db3f3f;
+nav, nav.navbar navbar-expand-lg navbar-light bg-light, 
+a.navbar-brand, button.navbar-toggler, div.navbar-collapse collapse show {
+  background-color: #db3f3f;
+}
+
+a.navbar-brand, a.nav-link {
+  color: rgb(213, 213, 13);
 }
 
 .btn-primary{
