--- a/Pokemon-Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon-Bootstrap/Poke'mon App/css/styles.css
@@ -2,14 +2,11 @@ body{
   background-color:#db3f3f;
 }
 
-nav, nav.navbar navbar-expand-lg navbar-light bg-light, 
-a.navbar-brand, button.navbar-toggler, div.navbar-collapse collapse show {
-  background-color: #db3f3f;
-}
 
 nav.navbar {
   color: rgb(213, 213, 13);
   font-family:pokemon_text;
+  background-color:#db3f3f;
 }
 
 .btn-primary{
@@ -105,7 +102,7 @@ font-size:3rem;
 }
 
 @media(max-width:1000px) {
-  .button_style{
+  .btn-primary{
     height: 300px;
     width:200px;
  }
@@ -126,7 +123,7 @@ font-size:3rem;
  }
 
 @media(max-width:400px) {
- .button_style{
+ .btn-primary:hover{
    height:150px;
    width:100px;
    margin-bottom:25px;
