--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -1,9 +1,29 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light,a.navbar-brand, button.navbar-toggler,
-div#navbarNav.navbar-collapse.collapse.show,.nav-light,.navbar-brand, .bg-light {
+
+.bg-light{
   background-color: #db3f3f;
-  font-family: pokemon_text;
+}
+
+a.navbar-brand{
   color:rgb(213, 213, 13);
 }
+
+a.nav-link{
+  color:rgb(213, 213, 13);
+}
+
+span.navbar-toggler-icon{
+  color:rgb(213, 213, 13);
+  border:none;
+}
+
+
+
+
+
+
+
+
+
 body{
   background-color: #db3f3f;
 }
