--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -1,14 +1,17 @@
 
 a.navbar-brand{
   color:rgb(213, 213, 13);
+  font-family: pokemon_text;
 }
 
 .nav-link{
   color:rgb(213, 213, 13);
+  font-family: pokemon_text;
 }
 
 span.navbar-toggler-icon{
   color:rgb(213, 213, 13);
+  font-family: pokemon_text;
   border:none;
 }
 
@@ -18,10 +21,12 @@ span.navbar-toggler-icon{
 
 .navbar-light .navbar-brand {
   color:rgb(213, 213, 13);
+  font-family: pokemon_text;
 }
 
 .navbar-light .navbar-toggler-icon{
   color:rgb(213, 213, 13);
+  font-family: pokemon_text;
 }
 
 
