--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -38,7 +38,7 @@ font-size:3rem;
   column-count: 6;
 }
 
-html,body,li.col.list-group-item,button.button_style{
+html,body,li.col.list-group-item{
   background-color:#db3f3f;
 }
 
