--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -102,7 +102,7 @@ html,body,li.col.list-group-item{
   color:black;
 }
 
-imageUrl{
+img{
   width:204.48px;
   height:128.64px;
   /* 2.13 inches wide and 1.34 inches tall */
