--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -66,7 +66,7 @@ html,body,li.col.list-group-item{
 
 .modal {
   margin: auto;
-  display: inline-block;
+  position:fixed;
   box-sizing: border-box;
   background: rgb(213, 213, 13);
   padding: 15px;
