--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -12,9 +12,9 @@
   border-color: rgba(0,0,0,.1);
   font-family:pokemon_text;
 }
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-  color:rgb(213, 213, 13);
+a.nav-link{
   font-family:pokemon_text;
+  color:rgb(213, 213, 13);
 }
 
 .btn-primary {
