--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -17,6 +17,10 @@ a.nav-link{
   color:rgb(213, 213, 13);
 }
 
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+  color:rgb(213, 213, 13);
+}
+
 .btn-primary {
   border-radius:20px;
   border: 0;
