--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -17,7 +17,9 @@ a.nav-link{
   color:rgb(213, 213, 13)!important;
 }
 
-
+span.navbar-toggler-icon{
+  color:rgb(213, 213, 13);
+}
 
 .btn-primary {
   border-radius:20px;
