--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -1,3 +1,9 @@
+h1{
+  margin-bottom:50px;
+  margin-top:50px;
+}
+
+
 .bg-light {
   background-color:#db3f3f!important;
 }
@@ -17,7 +23,7 @@ a.nav-link{
   color:rgb(213, 213, 13)!important;
 }
 
-span.navbar-toggler-icon{
+button.navbar-toggler-collapsed{
   color:rgb(213, 213, 13);
 }
 
