--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -23,7 +23,7 @@ a.nav-link{
   color:rgb(213, 213, 13)!important;
 }
 
-button.navbar-toggle-icon{
+button.navbar-toggler{
   color:rgb(213, 213, 13)!important;
 }
 span.navbar-toggler-icon{
