--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -13,9 +13,14 @@ a.nav-link{
   color:rgb(213, 213, 13)!important;
 }
 
-.navbar-toggler-icon.url {
+.navbar-light .navbar-brand {
   color:rgb(213, 213, 13)!important;
 }
+
+span.navbar-toggler-icon{
+  color:rgb(213, 213, 13)!important;
+}
+
 
 .btn-primary {
   border-radius:20px;
