--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -14,6 +14,7 @@ a.nav-link{
 }
 
 a.navbar-brand {
+  font-family:pokemon_text;
   color:rgb(213, 213, 13)!important;
 }
 
@@ -32,7 +33,7 @@ span.navbar-toggler-icon{
 }
 
 .navbar-light .navbar-toggler-icon {
-  background-color: rgb(213, 213, 13);
+  color: rgb(213, 213, 13);
 }
 
 
