--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -31,7 +31,7 @@ a.navbar-brand {
 
 
 .navbar-light .navbar-toggler-icon {
-background-image:url(data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(213,213,13)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e);
+background-image:url(data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(213,213,13)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e)!important;
 }
   
 
