--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -35,7 +35,7 @@ background-image:url(data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http:/
 }
   
 
-.btn-primary {
+.card-btn {
   border-radius:20px;
   border: 0;
   font-family:pokemon_text;
@@ -100,6 +100,12 @@ html,body,li.col.list-group-item{
   text-align: center;
 }
 
+div.modal-header,div.modal-body,div.modal-footer{
+  background: rgb(213, 213, 13);
+}
+
+
+
 .modal {
   margin: auto;
   position:fixed;
@@ -111,20 +117,8 @@ html,body,li.col.list-group-item{
   text-align: center;
 }
 
-.btn-secondary {
-  float: right;
-  border: 0;
-  background: none;
-  color: black;
-  font-family:pokemon_text;
-  cursor:pointer;
-  font-size:20px;
-}
 
-.btn-secondary:hover {
-  text-decoration: underline;
-  color:red;
-}
+
 
 .modal h1 {
   margin-top: 0;
