--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -44,10 +44,29 @@ font-size:3rem;
 margin-bottom:50px;
 margin-top:50px;
 }
+
+.card-btn {
+  border-radius: 20px;
+  border: 0;
+  font-family: pokemon_text;
+  font-size: 2rem;
+  font-weight: 600;
+  background: purple;
+  color: rgb(213, 213, 13);
+  cursor: pointer;
+  height: 300px;
+  width: 200px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+  text-align: center;
+}
+
 .pokemon-list{
   list-style:none;
   text-align:center;
-  padding:20px;
+  margin:20px;
   column-count: 6;
 }
 
