--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -15,7 +15,7 @@ a.navbar-brand {
 }
 
 .navbar-light .navbar-toggler {
-  color: rgb(213, 213, 13)!important;;
+  color: rgb(213, 213, 13)!important;
   border-color:none!important;
 }
 
@@ -24,21 +24,14 @@ a.navbar-brand {
   border-color:rgb(213, 213, 13)!important;
 }
 
-
-
-.navbar-light .navbar-toggler-icon {
-background-image:url(data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(213,213,13)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e)!important;
-}
-  
-}
 @font-face{
   font-family: pokemon_text;
   src:url(Pokemon_Solid.ttf);
 }
 
 h1{
-font-family: pokemon_text;
-color:rgb(213, 213, 13);
+font-family: pokemon_text!important;
+color:rgb(213, 213, 13)!important;
 text-align:center;
 font-size:3rem;
 margin-bottom:50px;
@@ -48,7 +41,7 @@ margin-top:50px;
 .card-btn {
   border-radius: 20px;
   border: 0;
-  font-family: pokemon_text;
+  font-family: pokemon_text!important;
   font-size: 2rem;
   font-weight: 600;
   background: purple;
