--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -40,6 +40,8 @@ margin-top:50px;
 
 .card-btn {
   border-radius: 20px;
+  height:100px;
+  width:25px
   border: 0;
   font-family: pokemon_text!important;
   font-size: 2rem;
