padding button added

--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -47,6 +47,8 @@ margin-top:50px;
   color: rgb(213, 213, 13);
   cursor: pointer;
   text-align: center;
+  font-size:2rem;
+  padding:50px;
   margin:100px;
 }
 
