--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -51,7 +51,7 @@ p{
  background-color:rgb(213, 213, 13)!important;
 }
 
-btn btn-secondary, btn btn-primary {
+.btn-secondary, .btn-primary {
   font-family: pokemon_text!important;
   background: purple;
   color: rgb(213, 213, 13);
