--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -2,25 +2,25 @@
 
 .bg-light {
   background-color:#db3f3f!important;
-  cursor:none;
+  user-select:none;
 }
 
 a.nav-link{
   font-family:pokemon_text;
   color:rgb(213, 213, 13)!important;
-  cursor:none;
+  user-select:none;
 }
 
 a.navbar-brand {
   font-family:pokemon_text;
   color:rgb(213, 213, 13)!important;
-  cursor:none;
+  user-select:none;
 }
 
 .navbar-light .navbar-toggler {
   color: rgb(213, 213, 13)!important;
   border-color:none!important;
-  cursor:none;
+  user-select:none;
 }
 
 .navbar-toggler:focus, .navbar-toggler:hover {
@@ -34,42 +34,42 @@ a.navbar-brand {
 }
 
 h1{
-font-family: pokemon_text!important;
-color:rgb(213, 213, 13)!important;
-text-align:center;
-font-size:3rem;
-margin-bottom:50px;
-margin-top:50px;
-cursor:none;
+  font-family: pokemon_text!important;
+  color:rgb(213, 213, 13)!important;
+  text-align:center;
+  font-size:3rem;
+  margin-bottom:50px;
+  margin-top:50px;
+  user-select:none;
 }
 h5{
   font-family: pokemon_text!important;
   color:black;
   text-align:center;
-  cursor:none;
+  user-select:none;
 }
 p{
   color:black;
   font-family: pokemon_text!important;
-  cursor:none;
+  user-select:none;
 }
 
 .modal-header, .modal-footer{
   border-bottom: 1px solid black;
   border-top: 1px solid black;
-  cursor:none;
+  user-select:none;
 }
 
 .modal-content{
  background-color:rgb(213, 213, 13)!important;
- cursor:none;
+ user-select:none;
 }
 
 .btn-secondary {
   font-family: pokemon_text!important;
   background: purple;
   color: rgb(213, 213, 13);
-  cursor:none;
+  user-select:none;
 }
 
 
@@ -85,12 +85,12 @@ p{
   font-size:1rem;
   height:200px;
   width:150px;
-  cursor:none;
+  user-select:none;
 }
 
 .pokemon-list row list-group{
   border:none;
-  cursor:none;
+  user-select:none;
 }
 
 html,body,li.col.list-group-item{
@@ -102,5 +102,5 @@ li.list-group-item{
 }
 
 imageElement{
-  cursor:none;
+  user-select:none;
 }
