--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -67,11 +67,6 @@ p{
   user-select:none;
 }
 
-.btn-secondary{
-  background: rgb(184, 1, 184);
-}
-
-
 .card-btn {
   border-radius: 20px;
   border: 0;
@@ -85,7 +80,7 @@ p{
   height: 200px; 
   width: 150px;
 }
-.card-btn:hover{
+.card-btn:hover, .btn-secondary{
   background: rgb(184, 1, 184);
 }
 
